@@ -1,0 +1,7 @@
+package rbasamoyai.createbigcannons.effects.sounds;
+
+public interface HasAirAbsorptionSound {
+
+	float getAirAbsorption();
+
+}
